--- a/pages/about.html
+++ b/pages/about.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
+    <link rel="stylesheet" href="../css/Styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"></link>
 </head>
 <body>
     <div class="floating-heart">💕</div>
@@ -25,28 +27,65 @@
             <li><a href="enquiry.html">Enquiry</a></li>
             <li><a href="contact.html">Contact Us</a></li>
         </ul> 
-    </nav> 
+    </nav>
+    <!--Added a hamburger navigation  for small devices-->
+            <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div> 
     </header>
     <!--About Us Section-->
-
     <section id="about" class="section">
         <div class="container">
-            <h2 class="section-title">🤖About Us</h2>
             <div class="floating-card">
-                <h3>Our Story</h3>
-                <p>TECH-SISTERS was found and developed by a brilliant Software Developer student named SEDUMA MOHAU,who believe that Technhology should be as beautiful its functional</p>
-                <P>We facilitate engagement with all "Girlies",Young women,Sisters interested in Technology</p>
-                <h3>Our Mission</h3>   
-                <p>Our Mission is to make robotics more inclusive,accessible and appealing.We design robots that are not only technologically advanced but also aesthetically pleasing and design philosophy</p>
-                <p>And we facilitate online presence and engagement with our target audience</p>
-                <h3>Our Vission</h3>
-                <p>Our Vission is to recognised globally and collaborate with other big companies</p>
-                <br>
-                <strong>
-                    <p>Innovation meets femininity in every project we create!!</p>
-                </strong>
+                <div id="about" class="section">
+                <div class="container">
+                <h1 style="text-align: center; color: #ff1493; margin-bottom: 40px;">About TECH-SISTERS</h1>
+                
+                <div style="background: rgba(255,255,255,0.3); padding: 40px; border-radius: 20px; backdrop-filter: blur(10px); margin-bottom: 40px;">
+                    <h2 style="color: #ff1493; margin-bottom: 20px;">Our Mission</h2>
+                    <p style="font-size: 1.1rem; line-height: 1.8;">TECH-SISTERS was founded with a simple yet powerful vision: to create a world where women dominate the technology landscape through sisterhood, innovation, and unwavering support. We believe that when women unite in tech, incredible things happen.We make robotics more inclusive,accessible and appealing.We design robots that are not only technologically advanced but also aesthetically pleasing and design philosophy</p>
+                </div>
+
+                <div style="background: rgba(255,255,255,0.3); padding: 40px; border-radius: 20px; backdrop-filter: blur(10px); margin-bottom: 40px;">
+                    <h2 style="color: #ff1493; margin-bottom: 20px;">Our Story</h2>
+                    <p style="font-size: 1.1rem; line-height: 1.8;"><p>TECH-SISTERS was found and developed in 2025 by a brilliant Software Developer student named SEDUMA MOHAU,who believe that Technhology should be as beautiful its functional</p>TECH-SISTERS emerged from the need to address the gender gap in technology. What started as a small meetup group has grown into a global movement, impacting thousands of women worldwide and creating lasting change in the tech industry.</p>
+                </div>
+
+                <h2 style="text-align: center; color: #ff1493; margin: 60px 0 40px;">Meet Our Team</h2>
+                <div class="team-grid">
+                    <div class="team-member">
+                        <div class="team-avatar">👩‍💼</div>
+                        <h3 style="color: #ff1493;">Seduma Mohau</h3>
+                        <p><strong>Founder & CEO</strong></p>
+                        <p>Former Software Developer with 2 years 9 months experience in AI and machine learning(Microsoft Learn). Passionate about creating opportunities for women in tech.</p>
+                    </div>
+                    <div class="team-member">
+                        <div class="team-avatar">👩‍🔬</div>
+                        <h3 style="color: #ff1493;">Kholofelo Seduma</h3>
+                        <p><strong>CTO & Co-Founder</strong></p>
+                        <p>Honours in Agriculural Management Science, with 2 years experience of Computer Science . Led tech teams at Amazon and Microsoft before joining our mission.</p>
+                    </div>
+                    <div class="team-member">
+                        <div class="team-avatar">👩‍🎨</div>
+                        <h3 style="color: #ff1493;">Jessica Rodriguez</h3>
+                        <p><strong>Head of Community</strong></p>
+                        <p>UX designer turned community builder. Expert in creating inclusive spaces and fostering meaningful connections.</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
 </body>
+<footer>
+    <div class="socials">
+                <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://Twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+                <a href="https://LinkedIn.com" target="_blank"><i class="fab fa-LinkedIn"></i></a>
+            </div>
+    <p>&copy;2025 TECH-SISTERS.All rights reserved</p>
+</footer>
 </html>
+                
