--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
                 <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
                 <a href="https://Twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
-                <a href="https://LinkedIn.com" target="_blank"><i class="fab fa-LinkedIn"></i></a>
+                <a href="https://LinkedIn.com" target="_blank"><i class='fab fa-linkedin-in' style='font-size:24px'></i>
             </div>
     <p>&copy;2025 TECH-SISTERS.All rights reserved</p>
 </footer>
