Add form for enquiry section with validation

--- a/pages/enquiry.html
+++ b/pages/enquiry.html
@@ -52,6 +52,7 @@
     </header>
     <!--Enquiry Section-->
     <section id="enquiry" class="section">
+        <form id="myForm" onsubmit="return validateForm()">
         <div class="container">
             <h1 style="text-align: center; color: #ff1493; margin-bottom: 40px;">Make an Enquiry</h1>
                 <div class="form-container">
