Add script tag for validate.js in enquiry.html

--- a/pages/enquiry.html
+++ b/pages/enquiry.html
@@ -113,4 +113,5 @@
         </div>
     <p>&copy;2025 TECH-SISTERS.All rights reserved</p>
 </footer>
+            <script src="./validate.js"></script>
 </html>
