Enhance SEO with meta tags and updated title
Added SEO meta tags and updated the title for better visibility.

--- a/index.html
+++ b/index.html
@@ -3,15 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TECH-SISTERS</title>
-    <link rel="stylesheet" href="./css/Styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
-</head>
-<body>
-    <div class="floating-heart">💕</div>
-    <div class="floating-heart">💖</div>
-    <div class="floating-heart">⚙️</div>
-    <div class="floating-heart">🌸</div>
+    <!-- SEO Meta Tags -->
+    <title>TECH-SISTERS | Empowering Women in Technology & Robotics</title>
+    <meta name="description" content="TECH-SISTERS empowers women in technology through robotics training, coding bootcamps, mentorship programs, and a supportive sisterhood network. Join our mission to advance women in STEM fields.">
+    <meta name="keywords" content="women in tech, robotics for women, coding bootcamp, female engineers, tech mentorship, STEM education, women in STEM, coding for women, AI training, tech sisterhood">
+    <meta name="author" content="TECH-SISTERS">
+    <meta name="robots" content="index, follow">
 
     <header>
         <!--Navigation-->
