Add Open Graph and Twitter Card meta tags
Added Open Graph and Twitter Card meta tags to enhance social media sharing.

--- a/index.html
+++ b/index.html
@@ -10,13 +10,20 @@
     <meta name="author" content="TECH-SISTERS">
     <meta name="robots" content="index, follow">
 
-    <header>
-        <!--Navigation-->
-    <nav class="navbar">
-        <div class="logo">
-            <div class="logo-icon">🤖</div>
-            <span class="logo-text">💕TECH-SISTERS🤖</span>
-        </div>
+        <!-- Open Graph / Social Media Meta Tags -->
+    <meta property="og:title" content="TECH-SISTERS | Empowering Women in Technology & Robotics">
+    <meta property="og:description" content="Join TECH-SISTERS: A community empowering women in technology through robotics, coding bootcamps, and mentorship programs.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://tech-sisters.example.com">
+    <meta property="og:image" content="https://placehold.co/1200x630/ff6b9d/ffffff?text=TECH-SISTERS">
+    <meta property="og:site_name" content="TECH-SISTERS">
+    
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="TECH-SISTERS | Empowering Women in Technology & Robotics">
+    <meta name="twitter:description" content="Join TECH-SISTERS: A community empowering women in technology through robotics, coding bootcamps, and mentorship programs.">
+    <meta name="twitter:image" content="https://placehold.co/1200x630/ff6b9d/ffffff?text=TECH-SISTERS">
+    
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
             <li><a href="pages/about.html">About Us</a></li>
