--- a/index.html
+++ b/index.html
@@ -24,21 +24,12 @@
     <meta name="twitter:description" content="Join TECH-SISTERS: A community empowering women in technology through robotics, coding bootcamps, and mentorship programs.">
     <meta name="twitter:image" content="https://placehold.co/1200x630/ff6b9d/ffffff?text=TECH-SISTERS">
     
-        <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="pages/about.html">About Us</a></li>
-            <li><a href="pages/services.html">Our Services</a></li>
-            <li><a href="pages/enquiry.html">Enquiry</a></li>
-            <li><a href="pages/contact.html">Contact Us</a></li>
-        </ul> 
-    </nav>
-    <!--Added a hamburger navigation  for small devices-->
-            <div class="hamburger">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>  
-    </header>
+            <!-- Favicon -->
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🤖</text></svg>">
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
+</head>
+<body>
     <!--Robot Assistant-->
     <div class="robot-assistant" onclick="toggleRobotMessage()"></div>
     <div class="robot-message" id="robotMessage">
