Refactor robot assistant and features sections
Updated the robot assistant section and restructured the features section for clarity and consistency.

--- a/index.html
+++ b/index.html
@@ -63,80 +63,77 @@
             </div>
         </nav>
     </header>
-                    <div class="welcoming-robot">
-                        <!--Welcome Message-->
-                        <div class="welcome-bubble">🤖Welcome Sisters! Let The Journey Begins!💕</div>
+    <!-- Robot Assistant -->
+    <div class="robot-assistant">🤖</div>
+    <div class="robot-message" id="robotMessage">
+        <p>Hi there! I'm Rosie, your TECH-SISTERS assistant! Need help navigating or have questions? Just click on me!</p>
+    </div>
 
-                        <!--Robot Head-->
-                        <div class="robot-head">
-                            <div class="antena left"></div>
-                            <div class="antena right"></div>
-                            <div class="robot-eye">
-                                <div class="eye"></div>
-                                <div class="eye"></div>
-                            </div>
-                        </div>
-
-                        <!--Robot Body-->
-                        <div class="robot-body">
-                            <div class="heart-display"></div>
-
-                            <!--Robot Arms-->
-                            <div class="robot-arm left">
-                                <div class="robot-hand"></div>
-                            </div>
-                            <div class="robot-arm right">
-                                <div class="robot-hand"></div>
-                            </div>
-                        </div>
-
-                        <!--Robot-legs-->
-                        <div class="robot-leg left">
-                            <div class="robot-foot"></div>
-                        </div>
-                        <div class="robot-leg right">
-                            <div class="robot-foot"></div>
-                        </div>
-                    </div>
-                </div>
+    <!-- Main Content -->
+    <div class="main-concept">
+        <div class="hero" id="home">
+            <div class="hero-content">
+                <h1>🌸TECH-SISTERS💕</h1>
+                <p>Empowering Women in Technology Through Innovation And Sisterhood</p>
+                <p>Where Robotics Meets Female Excellence - Join the revolution of women shaping the future through technology!💕</p>
+                <a href="pages/about.html" class="cta-button">Discover Our Mission</a>
+                <a href="pages/services.html" class="cta-button">Explore Our Services</a>
+                <a href="pages/contact.html" class="cta-button">Contact</a>
             </div>
-
-                <div class="features">
-                    <div class="feature-card">
-                        <span class="featurer-icon"></span>
-                        <h3>Tech Training</h3>
-                        <p>Comprehensive technology training and hands-on workshop designed specifically
-                            for women to robotics and AI development.
-                        </p>
-                    </div>
-                    <div class="feature-card">
-                        <div class="featurer-icon"></div>
-                        <h3>Sisterhood Network</h3>
-                        <p>Connect with like-minded tech sisters, mentors and industy leaders in our supportive global community.</p>
-                    </div>
-                    <div class="feature-card">
-                        <span class="featurer-icon"></span>
-                        <h3>Bootcapms⚙️</h3>
-                        <p>SheCodes: A coding bootcamp for women to build skills and confidence.</p>
-                        <p>Code First Girls: Provides a variety of coding courses for women.</p>
-                    </div>
-                    <div class="feature-card">
-                        <span class="featurer-icon"></span>
-                        <h3>Mentorship Programs</h3>
-                        <p>Our Mentorship Program provide guidance,support and tranfer knowledge for career and personal development</p>
-                        <p>We aim to foster growth through knowledge sharing skill development, and network expansion.</p>
-                    </div>
-                </div>
         </div>
-    </div>    
-</body>
-<footer>
-    <div class="socials">
-                <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
-                <a href="https://Twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
-                <a href="https://LinkedIn.com" target="_blank"><i class='fab fa-linkedin-in' style='font-size:24px'></i>
+
+        <div class="robot-container">
+            <div class="welcoming-robot">
+                <div class="welcome-bubble">🤖Welcome Sisters! Let The Journey Begin!💕</div>
+                <div class="robot-head">
+                    <div class="antena left"></div>
+                    <div class="antena right"></div>
+                    <div class="robot-eye">
+                        <div class="eye"></div>
+                        <div class="eye"></div>
+                    </div>
+                </div>
+                <div class="robot-body">
+                    <div class="heart-display">❤️</div>
+                    <div class="robot-arm left">
+                        <div class="robot-hand"></div>
+                    </div>
+                    <div class="robot-arm right">
+                        <div class="robot-hand"></div>
+                    </div>
+                </div>
+                <div class="robot-leg left">
+                    <div class="robot-foot"></div>
+                </div>
+                <div class="robot-leg right">
+                    <div class="robot-foot"></div>
+                </div>
             </div>
+        </div>
+
+        <div class="features">
+            <div class="feature-card">
+                <h3>Tech Training</h3>
+                <p>Comprehensive technology training and hands-on workshops designed specifically for women in robotics and AI development.</p>
+            </div>
+            <div class="feature-card">
+                <h3>Sisterhood Network</h3>
+                <p>Connect with like-minded tech sisters, mentors and industry leaders in our supportive global community.</p>
+            </div>
+            <div class="feature-card">
+                <h3>Bootcamps ⚙️</h3>
+                <p>SheCodes: A coding bootcamp for women to build skills and confidence.</p>
+                <p>Code First Girls: Provides a variety of coding courses for women.</p>
+            </div>
+            <div class="feature-card">
+                <h3>Mentorship Programs</h3>
+                <p>Our Mentorship Program provides guidance, support and knowledge transfer for career and personal development.</p>
+                <p>We aim to foster growth through knowledge sharing, skill development, and network expansion.</p>
+            </div>
+        </div>
+
+      
+
     <p>&copy;2025 TECH-SISTERS.All rights reserved</p>
 </footer>
     <script>
