Implement tabs and accordion for programs and FAQs
Added a new interactive section with tabs for programs and an accordion for FAQs.

--- a/index.html
+++ b/index.html
@@ -132,7 +132,80 @@
             </div>
         </div>
 
-      
+              <!-- Tabs Section -->
+        <div class="interactive-section" id="about">
+            <h2 class="section-title">Our Programs</h2>
+            <div class="tabs">
+                <button class="tab-btn active" data-tab="tab1">Robotics</button>
+                <button class="tab-btn" data-tab="tab2">Web Development</button>
+                <button class="tab-btn" data-tab="tab3">AI & Machine Learning</button>
+                <button class="tab-btn" data-tab="tab4">Cybersecurity</button>
+            </div>
+            <div class="tab-content active" id="tab1">
+                <h3>Robotics Program</h3>
+                <p>Our robotics program teaches women how to design, build, and program robots. Students learn about sensors, actuators, microcontrollers, and computer vision while working on real-world projects.</p>
+                <p>Graduates have gone on to work at companies like Boston Dynamics, Tesla, and NASA.</p>
+            </div>
+            <div class="tab-content" id="tab2">
+                <h3>Web Development Bootcamp</h3>
+                <p>Learn full-stack web development with HTML, CSS, JavaScript, React, and Node.js. Our immersive program includes portfolio projects and job placement assistance.</p>
+                <p>95% of our graduates secure developer roles within 6 months of graduation.</p>
+            </div>
+            <div class="tab-content" id="tab3">
+                <h3>AI & Machine Learning</h3>
+                <p>Master the fundamentals of artificial intelligence and machine learning. Learn Python, TensorFlow, data analysis, and neural networks through hands-on projects.</p>
+                <p>Our AI program partners with leading research institutions and tech companies.</p>
+            </div>
+            <div class="tab-content" id="tab4">
+                <h3>Cybersecurity Training</h3>
+                <p>Become a cybersecurity expert with our comprehensive training program. Learn ethical hacking, network security, cryptography, and incident response.</p>
+                <p>Prepare for industry certifications like CISSP, CEH, and CompTIA Security+.</p>
+            </div>
+        </div>
+
+        <!-- Accordion Section -->
+        <div class="interactive-section" id="services">
+            <h2 class="section-title">Frequently Asked Questions</h2>
+            <div class="accordion">
+                <div class="accordion-item">
+                    <div class="accordion-header">
+                        <span>Who can join TECH-SISTERS?</span>
+                        <i class="fas fa-chevron-down"></i>
+                    </div>
+                    <div class="accordion-content">
+                        <p>TECH-SISTERS is open to all women and gender minorities who are interested in technology, regardless of their current skill level or background. We welcome beginners, students, professionals, and anyone looking to transition into tech.</p>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <div class="accordion-header">
+                        <span>Are your programs free?</span>
+                        <i class="fas fa-chevron-down"></i>
+                    </div>
+                    <div class="accordion-content">
+                        <p>We offer both free and paid programs. Our introductory workshops and community events are completely free. Our intensive bootcamps and certification programs have tuition fees, but we provide scholarships and payment plans to ensure accessibility.</p>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <div class="accordion-header">
+                        <span>Do I need prior experience?</span>
+                        <i class="fas fa-chevron-down"></i>
+                    </div>
+                    <div class="accordion-content">
+                        <p>No prior experience is required for most of our programs! We offer beginner-friendly courses that start from the basics. For our advanced programs, we provide prerequisite materials to help you get up to speed.</p>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <div class="accordion-header">
+                        <span>What support do you provide after graduation?</span>
+                        <i class="fas fa-chevron-down"></i>
+                    </div>
+                    <div class="accordion-content">
+                        <p>We provide lifelong career support including job placement assistance, interview preparation, resume reviews, networking events, and access to our alumni network of 5,000+ tech professionals. Our graduates also get lifetime access to our learning platform.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
 
     <p>&copy;2025 TECH-SISTERS.All rights reserved</p>
 </footer>
